improved code according to the given feedback